--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,15 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-	<%= cloudinary_js_config %>
+	<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 	<script>
-$(function() {
-	if($.fn.cloudinary_fileupload !== undefined) {
-	$("input.cloudinary-fileupload[type=file]").cloudinary_fileupload();
-}
-});
-</script>
+		$(document).ready(function () {
+			cloudinary.setCloudName('tearfund-test');
+			cloudinary.openUploadWidget({upload_preset: 'rnidnlqw', cropping: 'server'},
+				function(error, result) {console.log(error, result)});
+		});
+
+	</script>
 </head>
 <body>
 
